tests/build/fail/widget/module_path_malformed2.rs
use zero_ui::core::widget;

#[widget($crate::test_widget, invalid)]
pub mod test_widget {}

fn main() {}
